# evalforge

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml  thresholds.yaml
.github/workflows/: eval-gate.yml
grafana/provisioning/dashboards/: dashboards.yml  evalforge.json
grafana/provisioning/datasources/: datasource.yml
prometheus/: prometheus.yml
src/evalforge/: __init__.py  api.py  cli.py  config.py  exporter.py  models.py  runner.py  store.py  suites.py
src/evalforge/adapters/: __init__.py  base.py  mock.py  openai_compat.py
src/evalforge/judges/: __init__.py  base.py  heuristic.py  llm.py
src/evalforge/reporting/: __init__.py  junit.py  thresholds.py
src/evalforge/scorers/: __init__.py  base.py  guardrail.py  rag.py  tooluse.py
src/evalforge/web/: app.js  index.html  styles.css
suites/: guardrail_cases.yaml  rag_cases.yaml  tooluse_cases.yaml
tests/: test_api.py  test_gate.py  test_runner_store.py  test_scorers.py
