[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evalforge"
version = "0.1.0"
description = "EvalForge — Multi-Dimensional AI Eval Harness (RAG groundedness, tool-use reliability, guardrail robustness) with CI gate and Grafana trends."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "EvalForge" }]
keywords = ["llm", "eval", "rag", "agents", "guardrails", "ci", "prometheus", "grafana"]

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "sqlalchemy>=2.0",
    "prometheus-client>=0.20",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.1"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "respx>=0.21",
]

[project.scripts]
evalforge = "evalforge.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
evalforge = ["web/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]
